# art-dashboard-ui

./: .env  .env.development  .env.production  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.update  Makefile  OWNERS  README.md  app.py  env_var  frontend.config.json  jest.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: snyk_security.yaml  unit-tests.yaml
ansible/: build-all.yaml  build-base.yaml  deploy.yaml  setup.yaml  update.yaml
components/: new-content-checklist.tsx  new-content-done.tsx  new-content-form.tsx  new-content-note.tsx  new-content-state.tsx  new-content-wizard.tsx
components/api_calls/: api_calls.js  build_calls.js  release_calls.js  rpms_images_fetcher_calls.js
components/login/: Login.js  LoginButton.js  withAuth.js
components/release/: RpmsImagesList.js  openshift_version_select.js  release_branch_detail.js  (+1 more)
container/: README.md
docker/: Dockerfile  Dockerfile.base
openshift/: buildconfig-app.yaml  buildconfig-base.yaml  is.yaml  service.yaml
pages/: _app.tsx  index.js  index.tsx  login.js  new-content.tsx
public/: index.html
resources/: buildconfig.yaml  deploymentconfig.yaml  is.yaml  route.yaml  service.yaml
src/: App.js  index.js
static/: build.css  logs.css  logs.js  packages.css  script.js  style.css
static/css/: base.css  (+6 more)
styles/: Home.module.css  Login.module.css  styles.css
templates/: base.html  build.html  diff.html  index.html  logs.html  packages.html
tests/: __init__.py  test_app.py
(+60 files in other folders)
