[project]
name = "art-build-history"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "flask",
    "Flask[async]",
    "gunicorn",
    "redis",
    "rh-art-tools @ git+https://github.com/openshift-eng/art-tools.git@main",
    "ruamel.yaml",
    "semver",
    "tenacity",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "ruff>=0.14.9",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E722", "E501"]

[tool.ruff.format]
quote-style = "single"
